Skip to content

FTBFS: avcodec encoder

../../../modules/codec/avcodec/encoder.c: In function ‘OpenEncoder’:
../../../modules/codec/avcodec/encoder.c:261:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
../../../modules/codec/avcodec/encoder.c:440:18: error: ‘AVCodecContext’ has no member named ‘luma_elim_threshold’
../../../modules/codec/avcodec/encoder.c:441:18: error: ‘AVCodecContext’ has no member named ‘chroma_elim_threshold’
../../../modules/codec/avcodec/encoder.c:483:37: warning: assignment discards ‘const’ qualifier from pointer target type [enabled by default]
../../../modules/codec/avcodec/encoder.c:484:37: warning: assignment discards ‘const’ qualifier from pointer target type [enabled by default]
../../../modules/codec/avcodec/encoder.c:828:39: error: ‘AVCODEC_MAX_AUDIO_FRAME_SIZE’ undeclared (first use in this function)
../../../modules/codec/avcodec/encoder.c:828:39: note: each undeclared identifier is reported only once for each function it appears in
../../../modules/codec/avcodec/encoder.c: In function ‘EncodeVideo’:
../../../modules/codec/avcodec/encoder.c:947:9: error: implicit declaration of function ‘avcodec_encode_video’ [-Werror=implicit-function-declaration]
../../../modules/codec/avcodec/encoder.c:1010:5: warning: enumeration value ‘AV_PICTURE_TYPE_S’ not handled in switch [-Wswitch]
../../../modules/codec/avcodec/encoder.c:1010:5: warning: enumeration value ‘AV_PICTURE_TYPE_SI’ not handled in switch [-Wswitch]
../../../modules/codec/avcodec/encoder.c:1010:5: warning: enumeration value ‘AV_PICTURE_TYPE_SP’ not handled in switch [-Wswitch]
../../../modules/codec/avcodec/encoder.c:1010:5: warning: enumeration value ‘AV_PICTURE_TYPE_BI’ not handled in switch [-Wswitch]
../../../modules/codec/avcodec/encoder.c: In function ‘EncodeAudio’:
../../../modules/codec/avcodec/encoder.c:1067:31: warning: pointer targets in passing argument 4 of ‘avcodec_fill_audio_frame’ differ in signedness [-Wpointer-sign]
In file included from ../../../modules/codec/avcodec/encoder.c:44:0:
/usr/local/include/libavcodec/avcodec.h:4256:5: note: expected ‘const uint8_t *’ but argument is of type ‘char *’
../../../modules/codec/avcodec/encoder.c:1148:37: warning: pointer targets in passing argument 4 of ‘avcodec_fill_audio_frame’ differ in signedness [-Wpointer-sign]
In file included from ../../../modules/codec/avcodec/encoder.c:44:0:
/usr/local/include/libavcodec/avcodec.h:4256:5: note: expected ‘const uint8_t *’ but argument is of type ‘char *’
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information