avcodec: elim thresholds are only in libavcodec < 55 (refs #8291)